--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,8 +4,30 @@ body {
 }
 
 .formulario  {
+    width: fit-content;
     background: rebeccapurple;
     padding: 50px;
     border-radius: 20px;
     color: aliceblue;
 }
+
+.form-input {
+    width: 90%;
+    margin: 8px;
+}
+
+.form-submit {
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    background: darkred;
+    color: aliceblue;
+    width: 50%;
+}
+
+.box {
+    background: lightgreen;
+    height: 200px;
+    width: 200px;
+    margin: 20px
+}
+
