--- a/ejercicios/ejercicio_01.css
+++ b/ejercicios/ejercicio_01.css
@@ -4,7 +4,7 @@ body {
 }
 
 .card {
-    background: lightcyan;
+    background: rgb(119, 172, 172);
     border-radius: 5px;
     width: 500px;
     padding: 10px;
