--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,57 +1,91 @@
-
-body {
-    font-family: devjefersonmellado;
+body,
+html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  overflow: hidden;
+}
+.video-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  z-index: -1;
+}
+.video-background video {
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-.formulario  {
-    width: fit-content;
-    background: rebeccapurple;
-    padding: 50px;
-    border-radius: 20px;
-    color: aliceblue;
+.navbar {
+  background-color: #000;
+  padding: 10px 20px;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 1000;
 }
 
-.form-input {
-    width: 90%;
-    margin: 8px;
+.navbar-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.form-submit {
-    letter-spacing: 2px;
-    text-transform: uppercase;
-    background: darkred;
-    color: aliceblue;
-    width: 50%;
+.logo {
+  display: flex;
+  align-items: center;
 }
 
-.box {
-    background: lightgreen;
-    height: 200px;
-    width: 200px;
-    margin: 20px
+.logo img {
+  width: 40px;
+  height: 40px;
+  margin-right: 10px;
 }
 
-nav {
-    background: lightsalmon;
-    padding: 10px;
-    text-align: center;
+.logo span {
+  color: #fff;
+  font-size: 1.5em;
+  font-weight: bold;
 }
 
-.nav-item {
-    padding: 2px 4px;
-    border: 2px solid aliceblue;
-    border-radius: 5px;
-    background: rebeccapurple;
-    color: aliceblue;
-    text-decoration: none;
+.nav-links {
+  list-style: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
 }
 
-.nav-item:hover {
-    padding: 2px 4px;
-    border: 2px solid rebeccapurple;
-    border-radius: 5px;
-    background: aliceblue;
-    color: rebeccapurple;
-    text-decoration: none;
+.nav-links li {
+  margin: 0 15px;
 }
 
+.nav-links a {
+  color: #fff;
+  text-decoration: none;
+  font-size: 1em;
+  display: flex;
+  align-items: center;
+  padding: 5px 10px;
+  border: 2px solid transparent;
+  border-radius: 5px;
+  transition: all 0.3s ease;
+}
+
+.nav-links a i {
+  margin-right: 5px;
+}
+
+.nav-links a:hover {
+  border-color: #00f;
+  background-color: rgba(0, 0, 255, 0.2);
+}
