--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,6 +4,8 @@ html {
   padding: 0;
   height: 100%;
   overflow: hidden;
+  font-family: 'devjefersonmellado';
+  color: aliceblue;
 }
 .video-background {
   position: absolute;
@@ -26,66 +28,44 @@ html {
 }
 
 .navbar {
-  background-color: #000;
-  padding: 10px 20px;
-  position: fixed;
-  width: 100%;
-  top: 0;
-  left: 0;
-  z-index: 1000;
+
+  margin: 5vh;
+
+  .navbar-container {
+
+    display: flex;
+    flex-direction: row;
+  
+    .logo {
+  
+      display: flex;
+      flex-direction: row;
+  
+      img {
+        height: 10vh;
+      }
+  
+      span {
+        align-self: center;
+        
+        font-size: 5vh;
+      }
+    }
+
+    .nav-links {
+      
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      list-style: none; 
+      
+    }
+  }
 }
 
-.navbar-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
 
-.logo {
-  display: flex;
-  align-items: center;
-}
 
-.logo img {
-  width: 40px;
-  height: 40px;
-  margin-right: 10px;
-}
 
-.logo span {
-  color: #fff;
-  font-size: 1.5em;
-  font-weight: bold;
-}
 
-.nav-links {
-  list-style: none;
-  display: flex;
-  margin: 0;
-  padding: 0;
-}
 
-.nav-links li {
-  margin: 0 15px;
-}
-
-.nav-links a {
-  color: #fff;
-  text-decoration: none;
-  font-size: 1em;
-  display: flex;
-  align-items: center;
-  padding: 5px 10px;
-  border: 2px solid transparent;
-  border-radius: 5px;
-  transition: all 0.3s ease;
-}
-
-.nav-links a i {
-  margin-right: 5px;
-}
-
-.nav-links a:hover {
-  border-color: #00f;
-  background-color: rgba(0, 0, 255, 0.2);
-}
