--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,28 +6,22 @@ html {
   overflow: hidden;
   font-family: "devjefersonmellado";
   color: #ffffff;
+  
 }
-.video-background {
+
+#particles-js {
   position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
-  overflow: hidden;
-  z-index: -1;
-}
-.video-background video {
-  min-width: 100%;
-  min-height: 100%;
-  width: auto;
-  height: auto;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  background-color: #02050c;
+  background-image: url("");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 50%;
 }
 
 .navbar {
+  position: relative;
   transition: all 0.7s ease;
   display: flex;
   flex-direction: row;
