--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,7 +6,6 @@ html {
   overflow: hidden;
   font-family: "devjefersonmellado";
   color: #ffffff;
-  
 }
 
 #particles-js {
@@ -63,6 +62,16 @@ html {
       transition: all 0.5s ease;
     }
 
+    .nav-item[data-target="linkedin"] {
+      display: none;
+    }
+    .nav-item[data-target="email"] {
+      display: none;
+    }
+    .nav-item[data-target="download-cv"] {
+      display: none;
+    }
+
     .nav-item.active:not([data-target="inicio"]) {
       background: #00adef;
     }
@@ -96,6 +105,16 @@ html {
       }
     }
 
+    .nav-item[data-target="linkedin"] {
+      display: block;
+    }
+    .nav-item[data-target="email"] {
+      display: block;
+    }
+    .nav-item[data-target="download-cv"] {
+      display: block;
+    }
+
     .nav-item:hover {
       .text {
         display: inline-block;
@@ -107,6 +126,7 @@ html {
         display: inline-block;
       }
     }
+
   }
 }
 
@@ -116,7 +136,7 @@ main {
   align-items: center;
   position: fixed;
   top: 25%;
-  left: 30%;
+  left: 20%;
 
   .content-section {
     opacity: 0;
@@ -128,13 +148,76 @@ main {
 
   .content-section.active {
     opacity: 1;
-    max-height: 100vh; 
+    max-height: 100vh;
     padding: 2em;
   }
 
+  #inicio {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+    .profile-img-btns {
+      width: 40%;
+      display: flex;
+      flex-direction: column;
+      align-content: center;
+
+      .profile-picture {
+        width: 100%;
+        height: auto;
+        border-radius: 100%;
+      }
+      .nav-links {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        list-style: none;
+        padding-left: 0;
+        justify-content: center;
+        transition: all 0.5s ease;
+
+        .nav-item {
+          margin: 0 1vw;
+          color: #ffffff;
+          padding: 3px 8px;
+          background: #02050c;
+          border: 1px solid #00adef;
+          border-radius: 100%;
+          text-decoration: none;
+          transition: all 0.5s ease;
+
+          span {
+            display: none;
+          }
+        }
+
+        .nav-item.active:not([data-target="inicio"]) {
+          background: #00adef;
+        }
+
+        .nav-item:hover {
+          background: #00adef;
+        }
+      }
+    }
+
+    .description-profile {
+      width: 60%;
+      padding-left: 1vw;
+      h2 {
+        font-size: 5rem;
+        margin: 0 auto;
+      }
+      h3 {
+        color: #00adef;
+        font-size: 4rem;
+        margin: 0 auto;
+      }
+    }
+  }
 }
-
-
 
 /* main {
   display: flex;
