--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,6 +3,9 @@ html {
   margin: 0;
   padding: 0;
   height: 100%;
+  display: flex;
+  justify-content: center; /* Alinea horizontalmente */
+  align-items: center;
   overflow: hidden;
   font-family: "devjefersonmellado";
   color: #ffffff;
@@ -20,18 +23,20 @@ html {
 }
 
 .navbar {
-  position: relative;
-  transition: all 0.7s ease;
+  width: 90vw;
+  position: fixed;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin: 5vh;
+  top: 0;
+  left: 0;
+  margin: 3vh 5vw;
+
   .logo {
     display: flex;
     align-items: center;
     /* height: 100%; */
     img {
-      height: 10vh;
+      width: 5vw;
+      height: auto;
     }
 
     h1 {
@@ -53,6 +58,7 @@ html {
 
     .nav-item {
       margin: 0 1vw;
+      display: block;
       color: #ffffff;
       padding: 3px 8px;
       background: #02050c;
@@ -131,25 +137,25 @@ html {
 }
 
 main {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   position: fixed;
-  top: 25%;
-  left: 20%;
+  display: flex;
+  flex-direction: column;
+  width: 70vw;
+  height: 70vh;
 
   .content-section {
     opacity: 0;
     max-height: 0;
     overflow: hidden;
     padding: 0 2em;
-    transition: opacity 0.5s ease, max-height 0.5s ease, padding 0.5s ease;
+    transition: opacity 0.3s ease, max-height 0.3s ease, padding 0.3s ease;
   }
 
   .content-section.active {
+    margin: auto;
     opacity: 1;
     max-height: 100vh;
-    padding: 2em;
+    padding: 1em;
   }
 
   #inicio {
@@ -165,7 +171,8 @@ main {
       align-content: center;
 
       .profile-picture {
-        width: 100%;
+        margin: 0 auto;
+        width: 80%;
         height: auto;
         border-radius: 100%;
       }
@@ -205,15 +212,18 @@ main {
 
     .description-profile {
       width: 60%;
-      padding-left: 1vw;
+      display: flex;
+      flex-direction: column;
+      align-items: start;
       h2 {
-        font-size: 5rem;
-        margin: 0 auto;
+        font-size: 7vw;
+        margin-bottom: 0%;
       }
       h3 {
         color: #00adef;
-        font-size: 4rem;
-        margin: 0 auto;
+        font-size: 7vw;
+        margin-top: 0%;
+        font-weight: 200;
       }
     }
   }
